; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_do_delete_interests.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_do_delete_interests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_generic = type { i32 }

@MAX_INTERESTS = common dso_local global i32 0, align 4
@LEV_TARG_INTERESTS_CLEAR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_delete_interests(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.lev_generic*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32* @get_user(i32 %8)
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @MAX_INTERESTS, align 4
  %15 = icmp ugt i32 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %12, %2
  store i32 0, i32* %3, align 4
  br label %26

17:                                               ; preds = %12
  %18 = load i64, i64* @LEV_TARG_INTERESTS_CLEAR, align 8
  %19 = load i32, i32* %5, align 4
  %20 = sext i32 %19 to i64
  %21 = add nsw i64 %18, %20
  %22 = load i32, i32* %4, align 4
  %23 = call %struct.lev_generic* @alloc_log_event(i64 %21, i32 8, i32 %22)
  store %struct.lev_generic* %23, %struct.lev_generic** %7, align 8
  %24 = load %struct.lev_generic*, %struct.lev_generic** %7, align 8
  %25 = call i32 @clear_interests(%struct.lev_generic* %24)
  store i32 1, i32* %3, align 4
  br label %26

26:                                               ; preds = %17, %16
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32* @get_user(i32) #1

declare dso_local %struct.lev_generic* @alloc_log_event(i64, i32, i32) #1

declare dso_local i32 @clear_interests(%struct.lev_generic*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
